# CPP_IMGUI_Template

./: .gitignore  CMakeLists.txt  cloneImgui.bat  premake5.lua
DX11Gui/: CMakeLists.txt  DX11Gui.rc
DX11Gui/src/: main.cpp
DX11Gui/src/imguiCore/: imgui.cpp  imgui.h  imgui_demo.cpp  imgui_impl_win32.cpp  imgui_internal.h  imgui_widgets.cpp
ImguiWithDirectX11/: CMakeLists.txt  premake5.lua
KyleProject/: KyleProject.aps  KyleProject.vcxproj.filters  resource.h
KyleProject/src/: main.cpp  resource.h
